Fix scale overlapping with attributions on mobile devices

--- a/src/leaflet.css
+++ b/src/leaflet.css
@@ -192,6 +192,14 @@
 	}
 }
 
+@media screen and (max-width: 520px){
+	.leaflet-bottom {
+		.leaflet-left{
+			bottom: 34px;
+		}
+	}
+}
+
 
 /* zoom and fade animations */
 
